src/snapshots/xcsoar_tasks__tests__parse_all_oz_types.snap
---
source: src/lib.rs
expression: task
---
Task {
    task_type: Mixed,
    aat_min_time: Some(
        10800,
    ),
    start_requires_arm: None,
    start_score_exit: None,
    start_max_speed: Some(
        0.0,
    ),
    start_max_height: Some(
        1500,
    ),
    start_max_height_ref: Some(
        AGL,
    ),
    start_open_time: None,
    start_close_time: None,
    finish_min_height: Some(
        100,
    ),
    finish_min_height_ref: Some(
        MSL,
    ),
    fai_finish: Some(
        false,
    ),
    pev_start_wait_time: None,
    pev_start_window: None,
    points: [
        Point {
            point_type: Start,
            score_exit: None,
            waypoint: Waypoint {
                name: "Start Line",
                altitude: Some(
                    100.0,
                ),
                id: None,
                comment: None,
                location: Location {
                    longitude: 7.0,
                    latitude: 51.0,
                },
            },
            observation_zone: Line {
                length: 10000.0,
            },
        },
        Point {
            point_type: Turn,
            score_exit: None,
            waypoint: Waypoint {
                name: "Cylinder TP",
                altitude: Some(
                    150.0,
                ),
                id: None,
                comment: None,
                location: Location {
                    longitude: 7.1,
                    latitude: 51.1,
                },
            },
            observation_zone: Cylinder {
                radius: 500.0,
            },
        },
        Point {
            point_type: Turn,
            score_exit: None,
            waypoint: Waypoint {
                name: "Keyhole TP",
                altitude: Some(
                    200.0,
                ),
                id: None,
                comment: None,
                location: Location {
                    longitude: 7.2,
                    latitude: 51.0,
                },
            },
            observation_zone: Keyhole,
        },
        Point {
            point_type: Turn,
            score_exit: None,
            waypoint: Waypoint {
                name: "FAI Sector TP",
                altitude: Some(
                    180.0,
                ),
                id: None,
                comment: None,
                location: Location {
                    longitude: 7.3,
                    latitude: 51.1,
                },
            },
            observation_zone: FAISector,
        },
        Point {
            point_type: Turn,
            score_exit: None,
            waypoint: Waypoint {
                name: "Sector TP",
                altitude: Some(
                    220.0,
                ),
                id: None,
                comment: None,
                location: Location {
                    longitude: 7.4,
                    latitude: 51.0,
                },
            },
            observation_zone: Sector {
                radius: 5000.0,
                start_radial: 45.0,
                end_radial: 135.0,
                inner_radius: Some(
                    1000.0,
                ),
            },
        },
        Point {
            point_type: Turn,
            score_exit: None,
            waypoint: Waypoint {
                name: "SymmetricQuadrant TP",
                altitude: Some(
                    190.0,
                ),
                id: None,
                comment: None,
                location: Location {
                    longitude: 7.5,
                    latitude: 51.1,
                },
            },
            observation_zone: SymmetricQuadrant {
                radius: Some(
                    8000.0,
                ),
                angle: Some(
                    45.0,
                ),
            },
        },
        Point {
            point_type: Turn,
            score_exit: None,
            waypoint: Waypoint {
                name: "CustomKeyhole TP",
                altitude: Some(
                    160.0,
                ),
                id: None,
                comment: None,
                location: Location {
                    longitude: 7.6,
                    latitude: 51.0,
                },
            },
            observation_zone: CustomKeyhole {
                radius: Some(
                    15000.0,
                ),
                angle: Some(
                    60.0,
                ),
                inner_radius: Some(
                    750.0,
                ),
            },
        },
        Point {
            point_type: Turn,
            score_exit: None,
            waypoint: Waypoint {
                name: "MatCylinder TP",
                altitude: Some(
                    140.0,
                ),
                id: None,
                comment: None,
                location: Location {
                    longitude: 7.7,
                    latitude: 51.1,
                },
            },
            observation_zone: MatCylinder,
        },
        Point {
            point_type: Turn,
            score_exit: None,
            waypoint: Waypoint {
                name: "BGAStartSector TP",
                altitude: Some(
                    130.0,
                ),
                id: None,
                comment: None,
                location: Location {
                    longitude: 7.8,
                    latitude: 51.0,
                },
            },
            observation_zone: BGAStartSector,
        },
        Point {
            point_type: Turn,
            score_exit: None,
            waypoint: Waypoint {
                name: "BGAFixedCourse TP",
                altitude: Some(
                    120.0,
                ),
                id: None,
                comment: None,
                location: Location {
                    longitude: 7.9,
                    latitude: 51.1,
                },
            },
            observation_zone: BGAFixedCourse,
        },
        Point {
            point_type: Turn,
            score_exit: None,
            waypoint: Waypoint {
                name: "BGAEnhancedOption TP",
                altitude: Some(
                    110.0,
                ),
                id: None,
                comment: None,
                location: Location {
                    longitude: 8.0,
                    latitude: 51.0,
                },
            },
            observation_zone: BGAEnhancedOption,
        },
        Point {
            point_type: Finish,
            score_exit: None,
            waypoint: Waypoint {
                name: "Finish Cylinder",
                altitude: Some(
                    100.0,
                ),
                id: None,
                comment: None,
                location: Location {
                    longitude: 8.1,
                    latitude: 51.1,
                },
            },
            observation_zone: Cylinder {
                radius: 1000.0,
            },
        },
    ],
}
