src/snapshots/xcsoar_tasks__tests__roundtrip_all_oz_types.snap
---
source: src/lib.rs
expression: serialized
---
<Task type="Mixed" aat_min_time="10800" start_max_speed="0" start_max_height="1500" start_max_height_ref="AGL" finish_min_height="100" finish_min_height_ref="MSL" fai_finish="0">
    <Point type="Start">
        <Waypoint name="Start Line" altitude="100">
            <Location longitude="7" latitude="51"/>
        </Waypoint>
        <ObservationZone type="Line" length="10000"/>
    </Point>
    <Point type="Turn">
        <Waypoint name="Cylinder TP" altitude="150">
            <Location longitude="7.1" latitude="51.1"/>
        </Waypoint>
        <ObservationZone type="Cylinder" radius="500"/>
    </Point>
    <Point type="Turn">
        <Waypoint name="Keyhole TP" altitude="200">
            <Location longitude="7.2" latitude="51"/>
        </Waypoint>
        <ObservationZone type="Keyhole"/>
    </Point>
    <Point type="Turn">
        <Waypoint name="FAI Sector TP" altitude="180">
            <Location longitude="7.3" latitude="51.1"/>
        </Waypoint>
        <ObservationZone type="FAISector"/>
    </Point>
    <Point type="Turn">
        <Waypoint name="Sector TP" altitude="220">
            <Location longitude="7.4" latitude="51"/>
        </Waypoint>
        <ObservationZone type="Sector" radius="5000" start_radial="45" end_radial="135" inner_radius="1000"/>
    </Point>
    <Point type="Turn">
        <Waypoint name="SymmetricQuadrant TP" altitude="190">
            <Location longitude="7.5" latitude="51.1"/>
        </Waypoint>
        <ObservationZone type="SymmetricQuadrant" radius="8000" angle="45"/>
    </Point>
    <Point type="Turn">
        <Waypoint name="CustomKeyhole TP" altitude="160">
            <Location longitude="7.6" latitude="51"/>
        </Waypoint>
        <ObservationZone type="CustomKeyhole" radius="15000" angle="60" inner_radius="750"/>
    </Point>
    <Point type="Turn">
        <Waypoint name="MatCylinder TP" altitude="140">
            <Location longitude="7.7" latitude="51.1"/>
        </Waypoint>
        <ObservationZone type="MatCylinder"/>
    </Point>
    <Point type="Turn">
        <Waypoint name="BGAStartSector TP" altitude="130">
            <Location longitude="7.8" latitude="51"/>
        </Waypoint>
        <ObservationZone type="BGAStartSector"/>
    </Point>
    <Point type="Turn">
        <Waypoint name="BGAFixedCourse TP" altitude="120">
            <Location longitude="7.9" latitude="51.1"/>
        </Waypoint>
        <ObservationZone type="BGAFixedCourse"/>
    </Point>
    <Point type="Turn">
        <Waypoint name="BGAEnhancedOption TP" altitude="110">
            <Location longitude="8" latitude="51"/>
        </Waypoint>
        <ObservationZone type="BGAEnhancedOption"/>
    </Point>
    <Point type="Finish">
        <Waypoint name="Finish Cylinder" altitude="100">
            <Location longitude="8.1" latitude="51.1"/>
        </Waypoint>
        <ObservationZone type="Cylinder" radius="1000"/>
    </Point>
</Task>
